# slythir.github.io

./: .gitignore  README.md  index.html
osu-class-planner/: Cargo.toml  index.html  style.css
osu-class-planner/assets/: courses.json
osu-class-planner/pkg/: osu_class_planner.js  osu_class_planner_bg.wasm  package.json
osu-class-planner/src/: courses.rs  draggable.rs  lib.rs
osu-class-planner/src/courses/: course.rs  course_manager.rs  course_node.rs  course_tree.rs  tree_element.rs
