[package]
name = "osu-class-planner"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.89"
web-sys = { version = "0.3.66", features = ["Window", "Document", "HtmlElement", "Event", "console", "MouseEvent"] }
serde = { version = "1", features = ["derive"] }
once_cell = "1.19.0"
serde_json = "1.0"
